# present-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  OPTIMIZATION_RESULTS_ANALYSIS.md  Procfile  README.md  SHOP_ASSORTMENT_FEATURE_ENGINEERING_PLAN.md  XGBOOST_OPTIMIZATION_PLAN.md  XGBOOST_PERFORMANCE_OPTIMIZATION_COMPLETE.md  advanced_model_optimization.py  corrected_optimization.py  debug_feature_extraction.py  diagnosis-plan.md  diagnosis-variance-collapse.md  diagnostic_analysis.py  files_for_ml_expert.md  final_corrected_optimization.py  final_optimization.py  fix_missing_products.py  focused_optimization.py  force_model_reload.py  gift-selection-prediction-roadmap.md  iterative_model_optimization.py  ml_expert_technical_letter.md  open ai.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  technical_letter_ml_expert.md  test_enhanced_training.py  test_gender_debug.py  test_local_predict_endpoint.py  test_onthefly_classification.py  test_predict_endpoint.py  test_production_predict.json  test_shop_id_fix.py
.kilocode/: mcp.json
docs/: PRODUCTION_READINESS_CHECKLIST.md  catboost_fixes_summary.md  database_implementation.md  fix_uniform_predictions_plan.md  heroku_deployment_guide.md  heroku_deployment_steps.md  ml_expert_solution_plan.md  ml_fix_implementation_summary.md  phase_3_5_catboost_implementation_plan.md  postman_usage_guide.md  predict_endpoint_implementation_plan.md  predict_ml_integration_plan.md  structural_issues_analysis_and_fixes.md
models/: breakthrough_xgb_model.pkl  demand_predictor.pkl  demand_predictor_metadata.json  demand_predictor_production.pkl  demand_predictor_production_metadata.json  label_encoders.pkl  model_metadata.pkl
notebooks/: README.md  breakthrough_training.ipynb  catboost_implementation.ipynb  model_training_analysis.ipynb  model_training_with_shop_features.ipynb  requirements.txt  sales_dashboard.py
scripts/: add_admin_column_migration.py  compare_classifications.py  compare_input_data.py  create_consistent_smoke_test.py  create_test_api_user.py  create_test_user.py  debug_prediction_pipeline.py  debug_prediction_values.py  debug_shop_features.py  debug_users.py  force_api_reload.py  force_model_reload.py  get_admin_api_key.py  heroku_add_admin_column.py  init_heroku_db.py  investigate_model_issues.py  migrate_to_europe.py  migrate_to_postgres.py  quick_admin_fix.py  show_shop_features_delta.py  smoke_test.py  test_api_endpoint_direct.py  test_api_integration.py  test_api_predictor.py  (+15 more)
(+82 files in other folders)
